name:                day21
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/amalloy/day21#readme
license:             BSD3
license-file:        LICENSE
author:              Alan Malloy
maintainer:          alan@malloys.org
copyright:           2016 Alan Malloy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable solve
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5.6.2
                     , parsec >= 3.0
  default-language:    Haskell2010
